bringing the pieces together
