# app/api/views.py
@@ -2,7 +2,11 @@ from rest_framework import status, views
 from rest_framework.response import Response
 from app.auth.authentication import APIKeyAuth
 from app.auth.permissions import APIPermission
-from app.api.serializers import SendMessageRequestSerializer
+from app.api.serializers import (
+    SendMessageRequestSerializer
+)
+from app.core.models import MessageModel
+from utils.logging import get_logger
 
 DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT = \
     'delete', 'get', 'head', 'options', 'patch', 'post', 'put'
@@ -14,25 +18,40 @@ class BaseAPIView(views.APIView):
     """
     authentication_classes = (APIKeyAuth, )
     permission_classes = (APIPermission,)
-    allowed_methods = (GET, HEAD, OPTIONS, PATCH, POST, PUT)
+    allowed_methods = (GET, DELETE, HEAD, OPTIONS, PATCH, POST, PUT)
+    logger = get_logger(__name__)
 
     def __init__(self):
+        super(BaseAPIView).__init__()
         self.req_data = None
 
-    def handler(self, request, *args, **kwargs):
+    def call_handler(self, request, *args, **kwargs):
         allowed, response = self.is_allowed(request=request)
         valid, self.req_data = self.validate(request.data)
         if allowed and not valid:
-            response = self.bad_request()
+            response = self.respond(
+                code=status.HTTP_400_BAD_REQUEST,
+                data=self.req_data
+            )
         if allowed and valid:
-            response = self.handle(request, *args, **kwargs)
+            response = self.handler(request, *args, **kwargs)
         return response
 
     def post(self, request):
-        return self.handler(request, self.post.__name__)
+        self.logger.info(
+            event='received',
+            handler=self.__class__.__name__,
+            request=request.data
+        )
+        return self.call_handler(request)
 
     def get(self, request, *args, **kwargs):
-        return self.handler(request, *args, **kwargs)
+        self.logger.info(
+            event='received',
+            handler=self.__class__.__name__,
+            request=request.data
+        )
+        return self.call_handler(request, *args, **kwargs)
 
     def validate(self, data):
         valid = True
@@ -48,24 +67,24 @@ class BaseAPIView(views.APIView):
     def is_allowed(self, request):
         res = True, None
         if request.method.lower() not in self.allowed_methods:
-            res = False, Response(
-                status=status.HTTP_405_METHOD_NOT_ALLOWED,
-                data={
-                    'detail': 'Method "{}" not allowed.'.format(
-                        request.method)
-                },
-                content_type="application/json"
+            res = False, self.respond(
+                code=status.HTTP_405_METHOD_NOT_ALLOWED,
+                data=dict(
+                    detail='Method "{}" not allowed.'.format(request.method)
+                )
             )
         return res
 
-    def bad_request(self):
-        return Response(
-            status=status.HTTP_400_BAD_REQUEST,
-            data=self.req_data,
-            content_type="application/json"
+    def respond(self, code=status.HTTP_200_OK, data=None):
+        self.logger.info(
+            'response',
+            status_code=code,
+            handler=self.__class__.__name__,
+            response_data=data
         )
+        return Response(status=code, data=data, content_type="application/json")
 
-    def handle(self, request, *args, **kwargs):
+    def handler(self, request, *args, **kwargs):
         raise NotImplementedError(
             "`handle` method has not been implemented"
         )
@@ -78,10 +97,8 @@ class HealthCheckView(BaseAPIView):
     """
     allowed_methods = (GET,)
 
-    def handle(self, request, *args, **kwargs):
-        return Response(
-            status=status.HTTP_200_OK, content_type="application/json"
-        )
+    def handler(self, request, *args, **kwargs):
+        return self.respond()
 
 
 class SendMessageView(BaseAPIView):
@@ -92,7 +109,40 @@ class SendMessageView(BaseAPIView):
     allowed_methods = (POST,)
     serializer = SendMessageRequestSerializer
 
-    def handle(self, request, *args, **kwargs):
-        return Response(
-            status=status.HTTP_202_ACCEPTED, content_type="application/json"
+    def handler(self, request, *args, **kwargs):
+        try:
+            for message in self.req_data.get("body", list()):
+                self._init_message_object(message).save()
+                self._dispatcher()
+
+            response = self.respond(
+                code=status.HTTP_202_ACCEPTED
+            )
+        except Exception as e:
+            self.logger.exception(
+                'exception',
+                exception=str(e.__class__.__name__),
+                message=str(e),
+                handler=self.__class__.__name__,
+            )
+            response = self.respond(
+                code=status.HTTP_500_INTERNAL_SERVER_ERROR,
+                data=dict(
+                    detail='An internal server error has occured.'
+                )
+            )
+        return response
+
+    def _init_message_object(self, message):
+        return MessageModel(
+            messageId=message.get("messageId"),
+            senderId=message.get("senderId"),
+            recipientId=message.get("recipientId"),
+            messageType=message.get("messageType"),
+            channel=message.get("channel"),
+            message=message.get("message"),
+            priority=message.get("priority"),
         )
+
+    def _dispatcher(self):
+        pass
