# docs/api/swagger/common-1.0.yaml
@@ -2,19 +2,19 @@ definitions:
   Header:
     type: object
     properties:
-      messageId:
+      requestId:
         type: string
       timestamp:
         type: string
         format: date-time
       responseStatus:
         $ref: "#/definitions/Status"
-      groupId:
-        type: string
-      referenceId:
-        type: string
-      batch:
-        $ref: "#/definitions/Batch"
+#      groupId:
+#        type: string
+#      referenceId:
+#        type: string
+#      batch:
+#        $ref: "#/definitions/Batch"
     required:
       - messageId
       - timestamp
@@ -64,16 +64,16 @@ definitions:
       - precision
 
 parameters:
-   messageId:
-      name: messageId
+   requestId:
+      name: requestId
       in: header
-      description: Message ID of the message, should be a GUID that matches the same field in the header.
+      description: Requesd ID of the request, should be a GUID that matches the same field in the header.
       required: true
       type: string
    timestamp:
        name: timestamp
        in: header
-       description: Time message was sent
+       description: Time request was sent
        required: true
        type: string
        format: date-time
